precompiles/utils/macro/tests/compile-fail/precompile/codec/output-dont-impl-codec.stderr
error[E0277]: the trait bound `String: Codec` is not satisfied
  --> tests/compile-fail/precompile/codec/output-dont-impl-codec.rs:26:46
   |
26 |     fn foo(test: &mut impl PrecompileHandle) -> EvmResult<String> {
   |                                                 ^^^^^^^^^ the trait `Codec` is not implemented for `String`
   |
   = help: the following other types implement trait `Codec`:
             ()
             (TupleElement0, TupleElement1)
             (TupleElement0, TupleElement1, TupleElement2)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6, TupleElement7)
           and $N others
note: required by a bound in `encode_arguments`
  --> $WORKSPACE/precompiles/utils/src/solidity/codec/mod.rs
   |
   | pub fn encode_arguments<T: Codec>(value: T) -> Vec<u8> {
   |                            ^^^^^ required by this bound in `encode_arguments`
